Can't remove keyframes without active keying set #89592

Closed
opened 2021-07-02 03:33:02 +02:00 by Ovionis · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-26 21:49, hash: 7223a0348f
Worked: 2.93.0 Alpha, branch: master, commit date: 2021-04-09 21:26, hash: 0515ff70ec
Caused by 7fc220517f

Short description of error
Pressing Alt+I, to delete keyframes, returns a Report: Error: No active Keying Set

The original operator bpy.ops.anim.keyframe_delete_v3d was replaced with bpy.ops.anim.keyframe_delete

This operator doesn't ask for confirmation to delete a keyframe and instead uses the active Keying Set.
However, if no keying set is active in the scene, or specified in the operator's call, then it returns this error.

The operator's Keying Set defaults to 'DEFAULT', which uses the scene's active keying set but there's no fallback to the standard actual default 'LocRotScale'

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-26 21:49, hash: `7223a0348f` Worked: 2.93.0 Alpha, branch: master, commit date: 2021-04-09 21:26, hash: `0515ff70ec` Caused by 7fc220517f **Short description of error** Pressing Alt+I, to delete keyframes, returns a Report: `Error: No active Keying Set` The original operator `bpy.ops.anim.keyframe_delete_v3d` was replaced with `bpy.ops.anim.keyframe_delete` This operator doesn't ask for confirmation to delete a keyframe and instead uses the active Keying Set. However, if no keying set is active in the scene, or specified in the operator's call, then it returns this error. The operator's Keying Set defaults to `'DEFAULT'`, which uses the scene's active keying set but there's no fallback to the standard actual default `'LocRotScale'`
Author

Added subscriber: @Phigon

Added subscriber: @Phigon
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm. I will bisect to find the culprit.

Can confirm. I will bisect to find the culprit.
Member

Caused by 7fc220517f

(Checking if behavior is intended)

Caused by 7fc220517f (Checking if behavior is intended)
Member

This comment was removed by @PratikPB2123

*This comment was removed by @PratikPB2123*
Member

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

After reading discussion from #88068 I think this is really not a bug. Behavior has changed after the commit 7fc220517f.

So far All keyframes were supposed to delete from active frame after pressing Alt + I

Story after the mentioned commit: Alt + I deletes keyframes of active keying set.

Hi @dr.sybren , if you think this is not a bug/issue then can I/you close the task?

May be manual needs as update to describe the change.

After reading discussion from #88068 I think this is really not a bug. Behavior has changed after the commit 7fc220517f. So far All keyframes were supposed to delete from active frame after pressing `Alt + I` Story after the mentioned commit: `Alt + I` deletes keyframes of active keying set. Hi @dr.sybren , if you think this is not a bug/issue then can I/you close the task? May be manual needs as update to describe the change.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Since {key I} works without keying set, I think it's fair that {key Alt I} should also work without keying set. The old behaviour (of bpy.ops.anim.keyframe_delete_v3d) also worked without keying set, so yes, I do see this as a regression bug.

Since {key I} works without keying set, I think it's fair that {key Alt I} should also work without keying set. The old behaviour (of `bpy.ops.anim.keyframe_delete_v3d`) also worked without keying set, so yes, I do see this as a regression bug.
Author

While making myself a workaround/patch (python) for this, I decided to add this as a keyingset menu, like {key I} does, since the original default was just a single confirmation for LocRotScale.

So, request: An optional menu, to function the same as Insert Keyframes.

While making myself a workaround/patch (python) for this, I decided to add this as a keyingset menu, like {key I} does, since the original default was just a single confirmation for LocRotScale. So, request: An optional menu, to function the same as Insert Keyframes.
Member

@dr.sybren , thanks for confirming.

From triaging policy I assume this report should be marked as High priority because of recent regression. Since you are the Module owner I leave this decision for you :)

@dr.sybren , thanks for confirming. From triaging policy I assume this report should be marked as **High priority** because of recent regression. Since you are the Module owner I leave this decision for you :)

This issue was referenced by 1364f1e35c

This issue was referenced by 1364f1e35c2078658447493c05c937d93a3fe35f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2021-07-06 18:28:29 +02:00

I didn't want to think about task priorities, so I just fixed the issue instead ;-)

I didn't want to think about task priorities, so I just fixed the issue instead ;-)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89592
No description provided.